--- a/docs/getting_started.ipynb
+++ b/docs/getting_started.ipynb
@@ -454,7 +454,7 @@
         "  init_value=0.0,\n",
         "  peak_value=1.0,\n",
         "  warmup_steps=50,\n",
-        "  decay_steps=1_000,\n",
+        "  transition_steps=1000,\n",
         "  end_value=0.0,\n",
         ")\n",
         "\n",
